src/objects/SiteArea__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SquareMeter__c</fullName>
        <label>Square Meter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SupplyPoint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supply Point</label>
        <referenceTo>SupplyPoint__c</referenceTo>
        <relationshipLabel>Site Area</relationshipLabel>
        <relationshipName>SiteAreas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Site Area</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Site Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Area</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>